--- a/myProject/signup-style.css
+++ b/myProject/signup-style.css
@@ -88,9 +88,234 @@
      background: #fff;
      color: #000;
  }
+
  .footer{
-    background-color: black;
-    border-radius: 0px;
-    height: 150px;
+    background-color: #24262b;
+    
+   /* background-color: white;
+   height: 100px;
+   text-align: center;
+   background-color: lightcoral;
+    */
+
+}
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3;
+    box-sizing: 5px;
+   
+    border: 1px solid rgb(79, 57, 204);
+    width: 500px;
+    height: 500px;
+    align-items: center;
+
+}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+/* .cardcontainer{
+    padding: 2px 16px; 
+    
+} */
+p{
     text-align: center;
+    font-size: 25px;
+    /* text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: sans-serif;
+    width: 0px;
+    margin-top: 20px;
+    margin-bottom: 20px; */
+   
+
+}
+.card p1{
+   font-size: 20px;
+   font-weight: 400;
+   font-family: sans-serif;
+   margin-top: 20px;
+   margin-bottom: 20px;
+   text-decoration: aqua; 
+
+}
+/* .head{
+color: rgb(18, 8, 56);
+text-decoration-color: black;
+column-fill: balance; */
+
+/* }
+.cont{
+   display: flex;
+   
+   
+}
+.cont1{
+   display: flex;
+   
+} */
+.ft{
+   display: flex;
+   background-color: black;
+}
+.f1{
+   display: flex;
+   height: 40x;
+   text-align: right;
+}
+.background p{
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid #575c60; */
+  text-align: left;
+  padding: 50px;
+  margin: 100px;
+}
+
+.cardcontainer{
+   width: 1100px;
+   max-width: 100%;
+   margin: 0 auto;
+   
+   /*display: flex;
+   background-color: rgb(116, 248, 248);
+   border: 1px solid red;
+   justify-content: center;
+   align-items: center;
+   
+    display: grid;
+ grid-template-columns: repeat(3, 1fr);
+ grid-auto-rows: 100px;
+ gap: 20px;
+}} */
+}
+
+
+
+
+.title{
+    font-size: 20px;
+    font-style: Monaco;
+}
+.copyright{
+    font-family: Adobe Clean;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: right;
+    color:#575c60;
+    height: 50px;
+}
+ul{
+    list-style: none;
+}
+.footer{
+   background-color: #24262b;
+   padding: 70px 0;
+
+}
+.row{
+    max-width: 1170px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h1{
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col h1::before{
+    content: '';
+    position:absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+    color: #ffffff;
+    padding-left: 8px;
+}
+.footer-col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin:0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
+
+}
+.footer-col .social-links a:hover{
+    color: #24262b;
+    background-color: #ffffff;
+}
+
+
+
+
+ 
+
+/* responsive */
+@media(max-width: 767px){
+    .footer-col{
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+@media(max-width: 574px){
+    .footer-col{
+        width: 100%;
+        /* margin-bottom: 30px; */
+    }
+}
+a{
+    text-decoration: none;
+}
+.rw{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.copyright{
+    font-family: Adobe Clean;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: right;
+    color:#575c60;
+    height: 50px;
+    background-color: white;
+}
+.cardcontainer{
+    width: 1100px;
+    max-width: 100%;
+    margin: 0 auto;
 }
